--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.5",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
